--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -2,11 +2,28 @@ app.title=Calories management
 app.home=Home
 app.footer=Internship <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a> application
 app.login=Login as
+
+common.select=Select
+common.save=Save
+common.Cancel=Cancel
+common.add=Append
+common.edit=Edit
+common.delete=Delete
+
 user.title=Users
 user.name=Name
 user.email=Email
 user.roles=Roles
 user.active=Active
 user.registered=Registered
+
 meal.title=Meals
-common.select=Select
+meal.dateTime=Datetime
+meal.Description=Description
+meal.Calories=Calories
+
+filter.fromDate=From Date (inclusive)
+filter.toDate=To Date (inclusive)
+filter.fromTime=From Time (inclusive)
+filter.toTime=To Time (exclusive)
+filter.submit=Filter
