--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -21,6 +21,8 @@ meal.title=Meals
 meal.dateTime=Datetime
 meal.Description=Description
 meal.Calories=Calories
+meal.title_create=Create meal
+meal.title_update=Update meal
 
 filter.fromDate=From Date (inclusive)
 filter.toDate=To Date (inclusive)
