--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <url>https://javaops-demo.ru/topjava</url>
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>19</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring.version>5.3.32</spring.version>
@@ -110,6 +110,12 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>annotations</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
         <!-- Logging with SLF4J & LogBack -->
         <dependency>
             <groupId>org.slf4j</groupId>
