--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,11 @@
         <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring.version>5.3.32</spring.version>
-        <spring.security.version>5.8.8</spring.security.version>
+        <spring.version>5.3.37</spring.version>
+        <spring.security.version>5.8.13</spring.security.version>
         <spring-data-jpa.version>2.7.18</spring-data-jpa.version>
-        <jackson.version>2.17.0</jackson.version>
-        <tomcat.version>9.0.86</tomcat.version>
+        <jackson.version>2.17.2</jackson.version>
+        <tomcat.version>9.0.90</tomcat.version>
 
         <!-- Hibernate -->
         <hibernate.version>5.6.15.Final</hibernate.version>
@@ -37,13 +37,13 @@
         <webjars-datatables.version>1.13.5</webjars-datatables.version>
 
         <!-- Logging -->
-        <logback.version>1.5.3</logback.version>
-        <slf4j.version>2.0.12</slf4j.version>
+        <logback.version>1.5.6</logback.version>
+        <slf4j.version>2.0.13</slf4j.version>
 
         <!--DB-->
         <postgresql.version>42.7.3</postgresql.version>
         <!--    Tests  -->
-        <junit.jupiter.version>5.10.2</junit.jupiter.version>
+        <junit.jupiter.version>5.10.3</junit.jupiter.version>
         <assertj.version>3.26.0</assertj.version>
         <hamcrest.version>2.2</hamcrest.version>
     </properties>
@@ -60,7 +60,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.12.1</version>
+                <version>3.13.0</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -70,7 +70,7 @@
                 <!--https://junit.org/junit5/docs/current/user-guide/#running-tests-build-maven -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
+                <version>3.3.0</version>
                 <configuration>
                     <argLine>-Dfile.encoding=UTF-8</argLine>
                 </configuration>
@@ -81,7 +81,7 @@
             <plugin>
                 <groupId>org.codehaus.cargo</groupId>
                 <artifactId>cargo-maven3-plugin</artifactId>
-                <version>1.10.12</version>
+                <version>1.10.14</version>
                 <configuration>
                     <container>
                         <containerId>tomcat9x</containerId>
@@ -133,6 +133,14 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
             <scope>runtime</scope>
+        </dependency>
+
+        <!--  javax.annotation.meta.When.MAYBE compile warning, https://stackoverflow.com/questions/53326271/548473 -->
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>annotations</artifactId>
+            <version>3.0.1</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -332,7 +340,7 @@
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
-            <version>1.10.2</version>
+            <version>1.10.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
