11_04_HW10_duplicate_datetime

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -9,6 +9,7 @@ app.login=Login as
 app.profile=profile
 app.register=Registration
 app.registered=You are registered. Please Sign in.
+
 user.title=Users
 user.edit=Edit user
 user.add=Add user
@@ -42,3 +43,4 @@ common.confirm=Are you sure?
 common.save=Save
 common.cancel=Cancel
 exception.user.duplicateEmail=User with this email already exists
+exception.meal.duplicateDateTime=You already have meal with this date/time
